corrected alignment of div

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.shadow-md {
+  @apply w-[218px] h-[400px];
+}
